Bug 91757 - Doesn't respect TerminalApplication setting
Summary: Doesn't respect TerminalApplication setting
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-10-20 14:23 UTC by mrbox
Modified: 2005-02-01 22:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mrbox 2004-10-20 14:23:58 UTC
Version:           Kdevelop 3.1.0 (using KDE KDE 3.3.1)
Installed from:    Gentoo Packages
OS:                Linux

If i want to run an (console) application, kdevelop uses konsole.
I would like to have the option to choose an other console like xterm. 
This is extremely handy if you install kdevelop with the bare minimum (only kdelibs).
Comment 1 Stephan Binner 2004-10-20 21:45:29 UTC
You know about the Component Chooser in the control center? KDevelop ignores another Terminal Emulator setting?
Comment 2 mrbox 2004-10-20 22:14:29 UTC
I only have installed the bare minimum of kde (kdelibs)to run kdevelop.
So i don't have a Component Chooser, I asked it on the forum and they told me that i can only change it in the source. 
Comment 3 Stephan Binner 2004-10-20 22:48:02 UTC
Try within kdeglobals: [General] TerminalApplication=xterm
Comment 4 mrbox 2004-10-20 23:37:21 UTC
That doesn't work, look like it's hardcoded to call:
konsole --workdir <workdir> -e /bin/sh -c '<executeble> ; echo "press enter to continue!"; read'
Comment 5 Jens Dagerbo 2004-10-26 09:16:22 UTC
It would be _really_ nice if when someone restates a bugreport they at least leave a comment about it. Preferably even why they did so. 

There is no way through the web interface to tell that the "Summary" of this bug has in fact changed (or who did it). 

While the current "Doesn't respect TerminalApplication setting" might actually be considered a bug (if "welformed" KDE applications need to support this setting) and the original more a wish ("make KDevelop not require konsole" - I don't remember the wording), this restated summary in fact changes the report in such a way that if we fix the bug, this doesn't fullfill the wish.

The TerminalApplication setting is controlled via KControl, which is part of kdebase, which is what the original report explicitly said shouldn't be required.

Of course, to have a sole (to my knowledge) hardcoded dependency on kdebase could well be considered a bug.
Comment 6 Stephan Binner 2004-10-28 22:16:52 UTC
> There is no way through the web interface to tell that the "Summary" of this bug has in fact changed (or who did it).

"View Bug Activity" -> http://bugs.kde.org/show_activity.cgi?id=91757 ?

> this restated summary in fact changes the report in such a way that if we fix the bug, this doesn't fullfill the wish. 

No? The title was "Option to choose for *term instead of konsole". Such option exists KDE-wide. It's a bug of KDevelop to not respect it.

> The TerminalApplication setting is controlled via KControl, which is part of kdebase, which is what the original report explicitly said shouldn't be required. 

No need for kdebase/kcontrol, you can change kdeglobals with any text editor.
Comment 7 Jens Dagerbo 2005-02-01 22:03:37 UTC
CVS commit by dagerbo: 

Make use of Terminal Emulator settings

BUG: 91757


  M +3 -1      languages/cpp/debugger/gdbcontroller.cpp   1.68
  M +11 -3     languages/cpp/debugger/stty.cpp   1.10
  M +3 -1      languages/java/debugger/jdbcontroller.cpp   1.24
  M +11 -3     languages/java/debugger/stty.cpp   1.8
  M +3 -1      languages/ruby/debugger/rdbcontroller.cpp   1.26
  M +11 -3     languages/ruby/debugger/stty.cpp   1.2
  M +4 -2      parts/outputviews/appoutputviewpart.cpp   1.32