Make use of Terminal Emulator settings

BUG: 91757