languages/ruby/debugger/rdbcontroller.cpp
@@ -35,6 +35,7 @@
 #include "stty.h"
 #include "variablewidget.h"
 #include "domutil.h"
+#include "settings.h"
 
 #include <kapplication.h>
 #include <kconfig.h>
@@ -683,7 +684,8 @@ void RDBController::slotStart(const QString& ruby_interpreter, const QString& ch
 {
     Q_ASSERT (!dbgProcess_ && !tty_);
 	
-    tty_ = new STTY(config_dbgTerminal_, "konsole");
+//    tty_ = new STTY(config_dbgTerminal_, "konsole");
+    tty_ = new STTY(config_dbgTerminal_, Settings::terminalEmulatorName( *kapp->config() ));
     if (!config_dbgTerminal_)
     {
         connect( tty_, SIGNAL(OutOutput(const char*)), SIGNAL(ttyStdout(const char*)) );
